crates/cribo/tests/snapshots/test_circular_dependencies__class_level_cycles_bundled.snap
---
source: crates/serpen/tests/test_circular_dependencies.rs
expression: bundled_content
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# ─ Module: user_class ─
"""User class module with circular dependency."""
class User:
    """User class that references Admin class."""

    def __init__(self, name):
        self.name = name
        self.admin_reference = Admin

    def promote_to_admin(self):
        """Promote user to admin."""
        return self.admin_reference(self.name)

# ─ Module: admin_class ─
"""Admin class module with circular dependency."""
class Admin(User):
    """Admin class that inherits from User."""

    def __init__(self, name):
        super().__init__(name)
        self.is_admin = True

    def demote_to_user(self):
        """Demote admin to regular user."""
        return User(self.name)

# ─ Entry Module: main ─
"""Test case with class-level circular dependencies."""
def main():
    user = User("Alice")
    admin = Admin("Bob")
    print(f"User: {user.name}")
    print(f"Admin: {admin.name}")
if __name__ == "__main__":
    main()
