crates/cribo/tests/snapshots/test_circular_dependencies__class_level_cycles_error.snap
---
source: crates/cribo/tests/test_circular_dependencies.rs
expression: error_msg
---
Circular dependencies detected in the module graph:

Cycle 1: user_class → admin_class
  Type: ClassLevel
  Suggestions:
    # Move 'from user_class import ...' inside functions
    # Move 'from admin_class import ...' inside functions
