crates/cribo/tests/snapshots/test_circular_dependencies__package_level_cycles_bundled.snap
---
source: crates/cribo/tests/test_circular_dependencies.rs
expression: bundled_content
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: pkg1 ─
def main_function():
    """Main function that uses helper from pkg2"""
    return f"pkg1.main({helper_function()})"
def utility_function():
    """Utility that pkg2 will import"""
    return "pkg1_utility"
main_function = main_function
utility_function = utility_function

# ─ Module: pkg2 ─
def helper_function():
    """Helper function that depends on pkg1"""
    util_result = utility_function()
    return f"pkg2.helper(using_{util_result})"
def another_helper():
    """Another function in pkg2"""
    return "pkg2_helper"
helper_function = helper_function
another_helper = another_helper

# ─ Entry Module: main ─
def main():
    result = pkg1.main_function()
    print(f"Package cycle result: {result}")
if __name__ == "__main__":
    main()
main = main
