crates/cribo/tests/snapshots/test_circular_dependencies__package_level_cycles_error.snap
---
source: crates/cribo/tests/test_circular_dependencies.rs
expression: error_msg
---
Circular dependencies detected in the module graph:

Cycle 1: pkg2 → pkg1
  Type: ImportTime
  Suggestions:
    Extract shared interfaces to a separate module
    Use dependency injection pattern
    Reorganize module structure to eliminate circular dependencies
