crates/cribo/tests/snapshots/test_circular_dependencies__three_module_cycle_error.snap
---
source: crates/cribo/tests/test_circular_dependencies.rs
expression: error_msg
---
Circular dependencies detected in the module graph:

Cycle 1: module_b → module_c → module_a
  Type: ImportTime
  Suggestions:
    Extract shared interfaces to a separate module
    Use dependency injection pattern
    Reorganize module structure to eliminate circular dependencies
